fix: scrollbar bug in dark mode (#191)

--- a/src/styles/scrollbar.css
+++ b/src/styles/scrollbar.css
@@ -16,6 +16,10 @@ body {
   ::-webkit-scrollbar-thumb:hover {
     background: theme(colors.zinc.800/96);
   }
+
+  *::-webkit-scrollbar{
+    background: theme(colors.zinc.800);
+  }
 }
 
 *::-webkit-scrollbar-thumb,
